testsuite/tests/overloadedrecflds/should_compile/NoDRFModuleExport_aux.hs
{-# LANGUAGE DuplicateRecordFields #-}
module NoDRFModuleExport_aux where
  data A = MkA { foo :: A }
  data B = MkB { foo :: B }
