testsuite/tests/overloadedrecflds/should_fail/DRFHoleFits_A.hs
{-# LANGUAGE DuplicateRecordFields #-}

module DRFHoleFits_A where

data S = MkS { foo :: Int }
data U = MkU { foo :: Int }
